@@ -20,39 +20,54 @@
             </p>
         {% endfor %}
     {% endif %}
+    <p>Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly.</p>
     <div id="content-main">
-        <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+        <form method="post" >
             {% csrf_token %}
             <table class="registration-form" >
                 <tr>
                     <td>
-                        {{ form.username.errors }}
-                        <label for="id_username" class="required">{{ form.username.label }}:</label> 
+                        {{ form.old_password.errors }}
+                        {{ form.old_password.label_tag }}
                     </td>
                     <td>
-                        {{ form.username }}
+                        {{ form.old_password }}
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        {{ form.password.errors }}
-                        <label for="id_password" class="required">Password:</label>
+                        {{ form.new_password1.errors }}
+                        {{ form.new_password1.label_tag }}
+                        {% if form.new_password1.help_text %}
+                            <span class="help">{{ form.new_password1.help_text|safe }}</span>
+                        {% endif %}
+                    </td>
+                    <td style="vertical-align:super">
+                        {{ form.new_password1 }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        {{ form.new_password2.errors }}
+                        {{ form.new_password2.label_tag }}
                     </td>
                     <td>
-                        <input type="hidden" name="next" value="{{ next }}" />
-                        {{ form.password }}
+                        {{ form.new_password2 }}
+                        {% if form.new_password2.help_text %}
+                            <p class="help">{{ form.new_password2.help_text|safe }}</p>
+                        {% endif %}
                     </td>
                 </tr>
                 <tr>
                     <td></td>
                     <td>
-                        <input type="submit" value="Log in" />
+                        <input type="submit" value="Change my password" class="default" />
                     </td>
                 </tr>
             </table>
         </form>
         <script type="text/javascript">
-            document.getElementById('id_username').focus()
+            document.getElementById('id_old_password').focus()
         </script>
     </div>
 {% endblock content%}
