@@ -1,0 +1,28 @@
+{% extends "base/base.html" %}
+{% load staticfiles %}
+{% block nav-global %}{% endblock nav-global %}
+{% block nav-local %}{% endblock nav-local %}
+{% block breadcrumbs %}{% endblock breadcrumbs %}
+{% block content %}
+    
+    <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
+    
+    <form method="post">{% csrf_token %}
+    <table class="registration-form" >
+        <tr>
+            <td>
+                {{ form.email.errors }}
+                <label for="id_email">Email address:</label>
+            </td>
+            <td>
+                {{ form.email }}
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <input type="submit" value="Reset my password" />
+            </td>
+        </tr>
+    </table>
+{% endblock content%}
