@@ -1,0 +1,68 @@
+{% extends "base/base.html" %}
+{% load staticfiles %}
+{% block nav-global %}{% endblock nav-global %}
+{% block nav-local %}{% endblock nav-local %}
+{% block breadcrumbs %}{% endblock breadcrumbs %}
+{% block content %}
+    {% if form.errors and not form.non_field_errors %}
+        <p class="errornote">
+            {% if form.errors.items|length == 1 %}
+                "Please correct the error below."
+            {% else %}
+                "Please correct the errors below.
+            {% endif %}
+        </p>
+    {% endif %}
+    {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+            <p class="errornote">
+                {{ error }}
+            </p>
+        {% endfor %}
+    {% endif %}
+    {% if validlink %}
+        <p>Please enter your new password twice so we can verify you typed it in correctly.</p>
+        <div id="content-main">
+            <form method="post" >
+                {% csrf_token %}
+                <table class="registration-form" >
+                    <tr>
+                        <td>
+                            {{ form.new_password1.errors }}
+                            {{ form.new_password1.label_tag }}
+                            {% if form.new_password1.help_text %}
+                                <span class="help">{{ form.new_password1.help_text|safe }}</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {{ form.new_password1 }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            {{ form.new_password2.errors }}
+                            {{ form.new_password2.label_tag }}
+                            {% if form.new_password2.help_text %}
+                                <span class="help">{{ form.new_password2.help_text|safe }}</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {{ form.new_password2 }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <input type="submit" value="Change my password" class="default" />
+                        </td>
+                    </tr>
+                </table>
+            </form>
+            <script type="text/javascript">
+                document.getElementById('id_old_password').focus()
+            </script>
+        </div>
+    {% else %}
+        <p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
+    {% endif %}
+{% endblock content%}
