@@ -14,3 +14,5 @@
 * 02a49f0 (HEAD, master) feat: Update for paging and small style updates.
 28/12/2015 Version 1.5.0:
 * 2a55838 (HEAD, master) feat: Update to Django 1.9 from 1.7
+29/12/2015 Version 1.5.1:
+* a39c4f8 (HEAD, master) feat: Add password management features
